<resources>
    <string name="app_name">Astrology</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="swich">Off</string>

    <string name="action_settings">Settings</string>
    <string name="item_one">Предсказательный гороскоп</string>
    <string name="item_two">Расчет совместимости</string>
    <string name="item_three">Расчет периодов</string>

    <string name="text_tab1">Это первая вкладка</string>
    <string name="text_tab2">Это вторая вкладка</string>
    <string name="text_tab_header">Свой заголовок</string>
    <string name="text_tab3">Это третья вкладка</string>
    <string name="text_day_prognoz">Дата прогноза</string>
    <string name="text_year_prognoz">Год прогноза</string>
    <string name="text_city_prognoz">Город рождения</string>
    <string name="sovm_main_text">Введите данные партнера</string>
    <string name="sovm_year">Выберите год встречи</string>
    <string name="sovm_month">Выберите месяц знакомства</string>
    <string name="sovm_day">Выберите день знакомства</string>
    <string name="rasschitat">Рассчитать</string>
    <string name="result">Результат</string>
    <string name="plus">Позитивные взаимодействия</string>
    <string name="minus">Проблемные взаимодействия</string>
    <string name="title_activity_maps">Map</string>
</resources>
